--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,12 +14,12 @@ include = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.9"
 numpy = "2.2.2"
 aiohttp = "^3.8.3"
 pydub = "^0.25.1"
 dataclass-factory = "2.16"
-aiofiles = "23.2.1"
+aiofiles = "^24.1.0"
 anyio = "4.3.0"
 aiohttp-retry = "^2.8.3"
 pydantic = "2.9.2"
