--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ frozenlist==1.4.1
 idna==3.10
 iniconfig==2.0.0
 multidict==6.1.0
-numpy==2.1.2
+numpy>=2.0.2
 packaging==24.1
 pluggy==1.5.0
 propcache==0.2.0
