--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ include = [
 
 [tool.poetry.dependencies]
 python = "^3.9"
-numpy = "2.2.2"
+numpy = "^2.0.2"
 aiohttp = "^3.8.3"
 pydub = "^0.25.1"
 dataclass-factory = "2.16"
